--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ Palette: https://coolors.co/palette/8d897e-9ea5a9-cfdae2-3b6b7c-3472b6
 body {
     margin: 0;
     text-align: center;
+    font-family: 'Rowdies', cursive;
 }
 
 img {
